--- a/assets/style.css
+++ b/assets/style.css
@@ -154,7 +154,7 @@ a {
 }
 
 #contactus {
-    float: center;
+    display: block;
     background-color: #e34234;
     margin: 20px;
     padding-top: 20px;
